--- a/package.json
+++ b/package.json
@@ -20,23 +20,26 @@
     "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
+    "@ionic-native/camera": "3.12.1",
     "@ionic-native/core": "3.12.1",
+    "@ionic-native/google-maps": "3.12.1",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
+    "@ngx-translate/core": "6.0.1",
+    "@ngx-translate/http-loader": "0.0.3",
     "ionic-angular": "3.5.3",
     "ionicons": "3.0.0",
+    "parse": "^1.10.0",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.12",
-    "@ionic-native/camera": "3.12.1",
-    "@ionic-native/google-maps": "3.12.1",
-    "@ngx-translate/core": "6.0.1",
-    "@ngx-translate/http-loader": "0.0.3"
+    "zone.js": "0.8.12"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "2.0.2",
-    "@ionic/cli-plugin-ionic-angular": "1.3.2",
+    "@ionic/app-scripts": "^2.1.0",
+    "@ionic/cli-plugin-ionic-angular": "1.4.0",
+    "@types/parse": "^1.9.4",
+    "ionic": "3.6.0",
     "typescript": "2.3.4"
   },
   "description": "An Ionic project"
